# instance

./:    .gitignore  .invenio  CAIRO-FIX.md  CHANGES.md  Dockerfile  Dockerfile.aris  Dockerfile.basic  Dockerfile.kfu  Dockerfile.mug  Dockerfile.oer  Dockerfile.theme  Dockerfile.tug  Dockerfile.tugdev  Dockerfile.tugqa  Pipfile  README.md  UV-GUIDE.md  create-test-users.sh  dev-steps.sh  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  package.json  pnpm-lock.yaml  pyproject.toml  run-tests.sh
.github/workflows/: deploy.yml  docker.yml  update-uv-lock.yml
assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
assets/templates/InvenioRecordsLom.Search/: SearchApp.results.jsx
assets/templates/custom_fields/: Experiments.js
auth/: kc-settings-pool.yaml  replacer.py  yaml2py.py
docker/nginx/: nginx.conf  test.crt  test.key
docker/pgadmin/: servers.json
migrations/migrate12to13/: steps.md
site/: .gitkeep  setup.cfg
site/instance/: views.py  webpack.py
templates/: comment-template.html  experiments.html  templates
templates/invenio_override/: navbar.html
templates/invenio_override/accounts/: login_user.html
templates/invenio_records_global_search/search/: search.html
templates/invenio_records_lom/: search.html  uploads.html
templates/invenio_records_marc21/search/: search.html
templates/semantic-ui/invenio_app_rdm/help/: search.de.html  search.en.html  statistics.en.html
templates/semantic-ui/invenio_app_rdm/records/: deposit.html
templates/semantic-ui/invenio_app_rdm/records/macros/: creatibutors.html
templates/semantic-ui/invenio_app_rdm/users/: base.html  communities.html  requests.html  uploads.html
themes/: K3S-OPS.md
themes/ARIS/: invenio.cfg  variables.less
themes/KFU/: invenio.cfg  variables.less
themes/MUG/: CHANGELOG.md  additional.md  invenio.cfg  overrides.less  pyproject.toml  variables.less
themes/MUG/templates/semantic-ui/invenio_app_rdm/records/: deposit.html
themes/TUG/: additional.md  invenio.cfg  overrides.less  variables.less
themes/TUG/base/: overrides.less  pyproject.toml  variables.less  wipe_recreate.sh
themes/TUG/dev/: invenio.cfg
themes/TUG/qa/: invenio.cfg
themes/override-base/: additional.md  invenio.cfg
themes/override-basic/: additional.md  invenio.cfg  pyproject.toml
themes/override-oer/: additional.md  invenio.cfg
themes/vanilla/: additional.md
themes/vanilla/assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
themes/vanilla/assets/less/site/globals/: site.variables
translations/de/LC_MESSAGES/: messages.po
translations/en/LC_MESSAGES/: messages.po
