[project]
name = "instance"
requires-python = ">=3.12"
dynamic = ["version"]

authors = [
    { name = "Laura Thaci", email = "lthaci@tugraz.at" },
    { name = "Mojib Wali", email = "mojib.wali@tugraz.at" },
]

dependencies = [
    "invenio-app-rdm[opensearch2] ==13.0.0",
    "invenio-logging[sentry_sdk]>=4.0.0,<5.0.0",
    "uwsgi >=2.0",
    "uwsgitop >=0.11",
    "uwsgi-tools >=1.1.1",
    "invenio-curations==0.6.2",
    "invenio-global-search>=0.3.0",
    "invenio-override[marc21,lom] ~=0.0.7",
    "setuptools <82"
]

[tool.setuptools]
py-modules = []

[tool.uv.sources]
# remove or comment these sources for instance releases. build only from official releases.
# invenio-override = { path = "../invenio-override", editable = true }
invenio-override = { git = "https://github.com/sharedRDM/invenio-override", branch = "theme-redesign" }
