[project]
name = "instance"
requires-python = ">=3.12"
dynamic = ["version"]

authors = [
    { name = "Laura Thaci", email = "lthaci@tugraz.at" },
    { name = "Mojib Wali", email = "mojib.wali@tugraz.at" },
]

dependencies = [
    "invenio-app-rdm[opensearch2] ==13.0.0",
    "uwsgi >=2.0",
    "uwsgitop >=0.11",
    "uwsgi-tools >=1.1.1",
    "setuptools <82"
]

[project.optional-dependencies]
tug = [
    "invenio-saml>=1.0.0",
    "invenio-config-tugraz>=0.13.3",
    "invenio-curations==0.6.2",
    "invenio-global-search>=0.3.0",
    "invenio-override[marc21,lom] ~=0.0.7",
    "invenio-imoox>=0.2.0",
    "invenio-alma>=0.13.5",
    "invenio-pure>=0.1.0",
    "invenio-moodle>=1.1.3",
    "invenio-campusonline>=0.3.0",
    "invenio-workflows-tugraz>=0.11.0",
    "repository-cli>=0.11.0",
    "invenio-catalogue-marc21>=0.0.4",
]
mug = [
    "invenio-curations==0.6.2",
    "invenio-global-search>=0.3.0",
    "invenio-override[lom] ~=0.0.7"
]
basic = [
    "invenio-override ~=0.0.7"
]


[tool.setuptools]
py-modules = []

[tool.uv.sources]
# remove or comment these sources for instance releases. build only from official releases.
invenio-override = { git = "https://github.com/sharedRDM/invenio-override", branch = "main" }
