[project]
name = "instance"
requires-python = ">=3.14"
dynamic = ["version"]

authors = [
    { name = "Laura Thaci", email = "lthaci@tugraz.at" },
    { name = "Mojib Wali", email = "mojib.wali@tugraz.at" },
]

dependencies = [
    "invenio-app-rdm[opensearch2]==14.0.0b5.dev6",
    "uwsgi>=2.0",
    "uwsgitop>=0.11",
    "uwsgi-tools>=1.1.1",
    "setuptools<82",
    "invenio-override >=1.0.0",
]

[tool.djlint]
indent = 2
profile = "jinja"

[tool.setuptools]
py-modules = []
